[gd_scene load_steps=7 format=4]

[ext_resource type="Script" path="res://Menus/options.gd" id="1"]
[ext_resource type="PackedScene" uid="uid://dcoptsn8erdwh" path="res://UI/panel.tscn" id="2"]
[ext_resource type="Script" path="res://Menus/h_slider.gd" id="3"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_l6nii"]

[sub_resource type="InputEventKey" id="InputEventKey_ns4ww"]
device = -1
keycode = 4194305

[sub_resource type="Shortcut" id="Shortcut_glxab"]
events = [SubResource("InputEventKey_ns4ww")]

[node name="Options" type="Control"]
z_index = 2
custom_minimum_size = Vector2(636, 612)
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -318.0
offset_top = -306.0
offset_right = 318.0
offset_bottom = 306.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1")

[node name="Panel" parent="." instance=ExtResource("2")]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = 0.0
offset_bottom = 60.0
grow_horizontal = 2
grow_vertical = 2

[node name="Title" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -96.0
offset_top = 30.0
offset_right = 96.0
offset_bottom = 79.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 48
text = "options"

[node name="Sliders" type="VBoxContainer" parent="."]
layout_mode = 0
offset_left = 102.0
offset_top = 108.0
offset_right = 525.0
offset_bottom = 342.0
theme_override_constants/separation = 18

[node name="Sounds" type="HBoxContainer" parent="Sliders"]
layout_mode = 2
theme_override_constants/separation = 12

[node name="Sound Slider" type="HSlider" parent="Sliders/Sounds"]
custom_minimum_size = Vector2(240, 0)
layout_mode = 2
max_value = 1.0
step = 0.05
script = ExtResource("3")

[node name="Label" type="Label" parent="Sliders/Sounds"]
layout_mode = 2
text = "sounds"

[node name="Music" type="HBoxContainer" parent="Sliders"]
layout_mode = 2
theme_override_constants/separation = 12

[node name="Music Slider" type="HSlider" parent="Sliders/Music"]
custom_minimum_size = Vector2(240, 0)
layout_mode = 2
max_value = 1.0
step = 0.05
script = ExtResource("3")

[node name="Label" type="Label" parent="Sliders/Music"]
layout_mode = 2
text = "music"

[node name="Ambience" type="HBoxContainer" parent="Sliders"]
layout_mode = 2
theme_override_constants/separation = 12

[node name="Ambience Slider" type="HSlider" parent="Sliders/Ambience"]
custom_minimum_size = Vector2(240, 0)
layout_mode = 2
max_value = 1.0
step = 0.05
script = ExtResource("3")

[node name="Label" type="Label" parent="Sliders/Ambience"]
layout_mode = 2
text = "ambience"

[node name="Resolution" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -480.0
offset_top = -240.0
offset_right = -177.0
offset_bottom = -66.0
grow_horizontal = 0
grow_vertical = 0
theme_override_constants/separation = 20

[node name="Up" type="Button" parent="Resolution"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
theme_override_styles/focus = SubResource("StyleBoxEmpty_l6nii")
text = "resolution +"

[node name="Down" type="Button" parent="Resolution"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
theme_override_styles/focus = SubResource("StyleBoxEmpty_l6nii")
text = "resolution -"

[node name="Back" type="Button" parent="."]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 18.0
offset_top = -42.0
offset_right = 122.0
offset_bottom = 39.0
grow_vertical = 0
theme_override_font_sizes/font_size = 32
shortcut = SubResource("Shortcut_glxab")
text = "<<"

[connection signal="drag_ended" from="Sliders/Sounds/Sound Slider" to="." method="_on_sound_slider_drag_ended"]
[connection signal="drag_started" from="Sliders/Sounds/Sound Slider" to="." method="_on_sound_slider_drag_started"]
[connection signal="mouse_entered" from="Sliders/Sounds/Sound Slider" to="." method="_on_sound_slider_mouse_entered"]
[connection signal="value_changed" from="Sliders/Sounds/Sound Slider" to="." method="_on_sound_slider_value_changed"]
[connection signal="drag_ended" from="Sliders/Music/Music Slider" to="." method="_on_music_slider_drag_ended"]
[connection signal="drag_started" from="Sliders/Music/Music Slider" to="." method="_on_music_slider_drag_started"]
[connection signal="mouse_entered" from="Sliders/Music/Music Slider" to="." method="_on_music_slider_mouse_entered"]
[connection signal="value_changed" from="Sliders/Music/Music Slider" to="." method="_on_music_slider_value_changed"]
[connection signal="drag_ended" from="Sliders/Ambience/Ambience Slider" to="." method="_on_ambience_slider_drag_ended"]
[connection signal="drag_started" from="Sliders/Ambience/Ambience Slider" to="." method="_on_ambience_slider_drag_started"]
[connection signal="mouse_entered" from="Sliders/Ambience/Ambience Slider" to="." method="_on_ambience_slider_mouse_entered"]
[connection signal="value_changed" from="Sliders/Ambience/Ambience Slider" to="." method="_on_ambience_slider_value_changed"]
[connection signal="mouse_entered" from="Resolution/Up" to="." method="_on_up_mouse_entered"]
[connection signal="pressed" from="Resolution/Up" to="." method="_on_up_pressed"]
[connection signal="mouse_entered" from="Resolution/Down" to="." method="_on_down_mouse_entered"]
[connection signal="pressed" from="Resolution/Down" to="." method="_on_down_pressed"]
[connection signal="mouse_entered" from="Back" to="." method="_on_back_mouse_entered"]
[connection signal="pressed" from="Back" to="." method="_on_back_pressed"]
